<resources>
    <string name="app_name">Room Booking</string>
    <string name="room_description">The room is located in %1$s, equipped with %2$s.</string>
    <string name="no_available_equipment">no available equipment</string>
    <string name="and">\u0020and\u0020</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter room name or equipment</string>
    <string name="next_hour">Next Hour</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="description">Room Description</string>
    <string name="hotel_availability">Booking Schedule</string>
    <string name="room_long_description">\u2022 It is equipped with %1$s.\n\u2022 Room size: %2$s.\n\u2022 Room capacity: %3$s.\n</string>
    <string name="room_location">The room is located in %1$s.</string>
    <string name="room_name">Room %1$s</string>
    <string name="book">Book ></string>
    <string name="name">Name</string>
    <string name="name_hint">Sara</string>
    <string name="email">Email</string>
    <string name="email_hint">example@mail.com</string>
    <string name="phone_hint">+49-157-44444444</string>
    <string name="phone">Phone</string>
    <string name="add">Add ></string>
    <string name="participants">Participants</string>
    <string name="field_should_not_be_empty">This field is mandatory</string>
    <string name="invalid_email">Please, enter a valid email address</string>
    <string name="next">Next ></string>
    <string name="booking_room_from_date">Please, choose the time you want to book %1$s</string>
    <string name="booking_room_to_date">Please, choose until what time you want to book %1$s</string>
    <string name="should_add_one_participant">Please, add at least one participant</string>
    <string name="success">All passes have been successfully sent!</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="create_event">Event Creation</string>
    <string name="event_title_hint">Party</string>
    <string name="event_description_hint">Have some margaritas with girlfriends</string>
    <string name="back_to_room_list">Go back to room list</string>
    <string name="filter_tooltip">Filtering rooms available for the next hour</string>
</resources>
