<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/card_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_room_booking_add_participants_name"
            style="@style/field_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:id="@+id/fragment_room_booking_add_participants_email"
            style="@style/field_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/fragment_room_booking_add_participants_phone"
            style="@style/field_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_room_booking_add_participants_name_field"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_hint"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/fragment_room_booking_add_participants_email_field"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_toEndOf="@+id/fragment_room_booking_add_participants_email" />

        <EditText
            android:id="@+id/fragment_room_booking_add_participants_phone_field"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_hint"
            android:inputType="phone" />
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/fragment_room_booking_add_participants_add"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <TextView
        style="@style/subtitle_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participants" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <ListView
                android:id="@+id/fragment_room_booking_add_participants_participants"
                android:layout_height="fill_parent"
                android:layout_width="match_parent"></ListView>
            </LinearLayout>
    </ScrollView>


</LinearLayout>